--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Leia atentamente até o final.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "gulp default"
   },
   "repository": {
     "type": "git",
